# ragent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml
.hermes/plans/: 2026-04-20_rbac-conversation-upload.md
deploy/: gunicorn.conf.py  start.sh
deploy/monitoring/grafana/dashboards/: ragent.json
docs/: infrastructure.md
docs/python/: 01-overview.md  02-framework.md  03-infra-ai.md  04-rag-core.md  05-ingestion.md  06-concurrency.md  07-data-model.md  08-deployment.md  09-auth-security.md  10-frontend.md  11-api-reference.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/deploy/: nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  chat.ts  client.ts  conversation.ts  department.ts  document.ts  knowledgeBase.ts
frontend/src/components/: RequireAuth.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  KnowledgePage.tsx  LoginPage.tsx  UploadPage.tsx
frontend/src/utils/: auth.ts
scripts/: bench.py  bench_compare.py  progress_report.py  simple_stress.py  stress_test.sh  verify_imports.py
src/ragent/: __init__.py  main.py
src/ragent/app/: auth_router.py  bigint_middleware.py  deps.py  middleware.py  rate_limit.py  router.py
src/ragent/common/: __init__.py  celery_app.py  celery_worker.py  context.py  exceptions.py  json_utils.py  logging.py  models.py  redis_manager.py  response.py  safe_json.py  snowflake.py  sse.py  trace.py
src/ragent/concurrency/: __init__.py  rate_limiter.py
src/ragent/config/: __init__.py  settings.py
src/ragent/infra/: auth.py  database.py
src/ragent/infra/ai/: embedding_service.py  llm_service.py  models.py  (+3 more)
src/ragent/ingestion/: __init__.py  context.py  nodes.py  pipeline.py  tasks.py
src/ragent/rag/: __init__.py  chain.py
tests/: conftest.py  test_celery_app.py  test_context.py  test_embedding_service.py  test_exceptions.py  test_intent_classifier.py  test_llm_service.py  test_logging.py  test_main.py  test_model_config.py  test_model_selector.py  test_models.py  test_probe_stream.py  test_prompt_builder.py  test_query_rewriter.py  test_rag_chain.py  test_rate_limiter.py  test_redis_manager.py  test_response.py  test_retriever.py  test_routing_executor.py  test_session_memory.py  test_settings.py  test_snowflake.py  test_sse.py  test_trace.py
tests/e2e/: test_chat_e2e.py  test_ingestion_e2e.py  test_rag_chain_e2e.py
tests/perf/: benchmark_ingestion.py  benchmark_rag.py  benchmark_redis.py
(+10 files in other folders)
