     1|[project]
     2|name = "ragent"
     3|version = "0.1.0"
     4|description = "RAG intelligent agent platform - Python version"
     5|requires-python = ">=3.11"
     6|dependencies = [
     7|    "litellm>=1.40.0",
     8|    "celery[redis]>=5.4.0",
     9|    "redis>=5.0.0",
    10|    "circuitbreaker>=2.0.0",
    11|    "fastapi>=0.111.0",
    12|    "uvicorn>=0.29.0",
    13|    "pydantic>=2.7.0",
    14|    "pydantic-settings>=2.2.0",
    15|    "sqlalchemy>=2.0.0",
    16|    "asyncpg>=0.29.0",
    17|    "httpx>=0.27.0",
    18|    "pyyaml>=6.0",
    19|    "opentelemetry-api>=1.24.0",
    20|    "opentelemetry-sdk>=1.24.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    21|]
    22|
    23|[project.optional-dependencies]
    24|dev = [
    25|    "pytest>=8.0.0",
    26|    "pytest-asyncio>=0.23.0",
    27|    "pytest-cov>=5.0.0",
    28|    "ruff>=0.4.0",
    29|]
    30|
    31|[tool.ruff]
    32|line-length = 120
    33|target-version = "py311"
    34|
    35|[tool.ruff.lint]
    36|select = ["E", "F", "W", "I"]
    37|
    38|[tool.pytest.ini_options]
    39|asyncio_mode = "auto"
    40|testpaths = ["tests"]
    41|