[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
version = "0.1.0"
description = "RAG intelligent agent platform - Python version"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "circuitbreaker>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "pdfplumber>=0.11.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "pgvector>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "benchmark_*.py"]
